# backup-system

./: .gitignore  AES.h  CMakeLists.txt  compile.sh  encrypt and decrypt.h  fail.txt  inotify.h  readme.md  run.sh
code/: AES.cpp  CMakeLists.txt  basefunction.cc  error.cc  main.cc  mian.cpp
code/errorhanding/: error.cpp  error.h
code/include/: AES.h  basefunction.h  encrypt_and_decrypt.h  error.h  huffdecode.h  huffencode.h  huffman_interface.h  inotify.h
code/include/huffman/: hufftree.h
server/: pom.xml
server/backup_server/: 24031.huf.cpt
server/src/main/java/org/example/: FileTransferServer.java  Task.java
test/: 1  1.sylink  1.txt  2.sylink
test/pop/: 2.c  3.9df  4.pp
test/pop/75711/: ds
